Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/gettasktodo/gettaskdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gettask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gettask
  template:
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettask
        image: devramacr1.azurecr.io/ram-repository/gettasktodo:v1
        ports:
        - containerPort: 8000
