Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/gettasktodo/gettasksvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gettask
spec:
  selector:
    app: gettask
  ports:
  - port: 80
    targetPort: 8000
