Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/gettasktodo/gettaskingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gettask
  labels:
    name: gettask
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: get.akservices.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gettask
            port: 
              number: 80
